fix: z-index of function dropdown popover (#32)
newrelic#28

--- a/nerdlets/root/styles.scss
+++ b/nerdlets/root/styles.scss
@@ -378,3 +378,7 @@
 [class*=TableHeaderCell-title] {
   border-bottom: none;
 }
+
+.react-select__menu {
+  z-index: 100;
+}
